RF 04.03, 06-11 | FolderTest > testCreateJobsInFolder